рабочая версия
